--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "browser-cookies": "^1.0.8",
     "body-parser": "^1.15.2",
-    "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
